examples/valid/assignment/intAssignment.wacc
# simple integer variable declaration and assignment
# Output:
# #empty#

#Program:#

begin
  int x = 10 ;
  x = 20
end
