examples/invalid/syntaxErr/assignment/bigIntAssignment.wacc
# int assignment overlow
# Output:
# #syntax error#

#Program:#

begin
  int x = 2200000000 
end
